common29/local.css: Fix spacing for codepoints, esp images.

--- a/common29/local.css
+++ b/common29/local.css
@@ -209,6 +209,17 @@ section { clear: left; }
 .codepoint span[lang], .codepoint bdi[lang] {
 	color: black;
     font-size: 1.6rem;
+    margin-inline: .5rem;
+	}
+.codepoint bdi[dir=rtl] {
+	color: black;
+    font-size: 1.6rem;
+    margin-inline-start: .5rem;
+	}
+.mapItem .codepoint span[lang], .mapItem .codepoint bdi[lang] {
+	color: black;
+    font-size: 2rem;
+    margin-inline: 1rem;
 	}
 
 table p {
